--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
     implementation 'androidx.navigation:navigation-ui:2.2.1'
-
+    annotationProcessor 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
-
+    debugImplementation 'com.ashokvarma.android:gander-imdb:3.1.0'
+    releaseImplementation 'com.ashokvarma.android:gander-no-op:3.1.0'
     implementation 'androidx.fragment:fragment:1.2.4'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 }
