--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,8 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
     implementation 'com.mindorks:placeholderview:0.7.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
+    annotationProcessor "android.arch.persistence.room:compiler:2.2.5"
+    implementation "android.arch.persistence.room:guava:2.2.5"
 }
